--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
         "react-hot-toast": "^2.4.1",
         "react-redux": "^8.1.3",
         "react-router-dom": "^6.18.0",
+        "recharts": "^3.3.0",
         "tailwind-merge": "^2.0.0",
         "yup": "^1.3.3",
         "zustand": "^4.4.7"
